welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: illegal start of simple pattern
var biscuit Int=0
               ^RunFour:3: error: '=' expected but ';' found.
while (biscuit == 4 ) {
^